Ejercicio con eventos, parámetros y sustitución de HTML
innerHTML (Sustituye el texto de los elementos HTML)

.addEventListener("evento", function(){miFuncion("Par1","Par2")});

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 <button id="boton1">Función Anónima</button>
 <button id="boton2">Función Personalizada</button>
 
+<h1 id="mensaje"></h1>
+
 
 <!-- Scripts de JavaScript -->
-<script type="text/javascript" src="js/scripts.js"></script>
+<script type="text/javascript" src="js/scripts_parametros.js"></script>
 
 </body>
 </html>
