Ejercicio de Parámetros, Cambio de Nombre y Noticias

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <button id="boton1">Función Anónima</button>
 <button id="boton2">Función Personalizada</button>
 
-<h1 id="mensaje"></h1>
+<h1 id="titular"></h1>
+<h3 id="subtitulo"></h3>
+<p id="texto"></p>
 
 
 <!-- Scripts de JavaScript -->
