Ejercicios con condicionales
Empleamos los tipos de condicionales:

- If / Else If / Else
- Switch

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta charset="utf-8"/>
-<title>Tercer Ejercicio JavaScript - EVENTOS</title>
+<title>Cuarto Ejercicio JavaScript - EVENTOS II</title>
 
 </head>
 
@@ -12,13 +12,15 @@
 <button id="boton1">Función Anónima</button>
 <button id="boton2">Función Personalizada</button>
 
+<h1 id="mensaje"></h1>
+
 <h1 id="titular"></h1>
 <h3 id="subtitulo"></h3>
 <p id="texto"></p>
 
 
 <!-- Scripts de JavaScript -->
-<script type="text/javascript" src="js/scripts_parametros.js"></script>
+<script type="text/javascript" src="js/scripts_ejercicio_combinado.js"></script>
 
 </body>
 </html>
