Ejercicios de Condicionales
Agregamos enlaces a las respuestas de URL

--- a/ejercicio_condicionales.html
+++ b/ejercicio_condicionales.html
@@ -10,10 +10,11 @@
 <body>
 
 <button id="boton1">If / Else</button>
-<button id="boton2">If / Else con textos</button>
-<button id="boton3">Switch</button>
+<button id="boton2">If / Else Buscadores</button>
+<button id="boton3">If / Else Buscadores con enlaces</button>
+<button id="boton4">Switch</button>
 
-<h1 id="mensaje"></h1>
+<h3 id="mensaje"></h3>
 
 
 
