Ejercicio de Transformación de JS a jQuery

--- a/ejercicio_jquery.html
+++ b/ejercicio_jquery.html
@@ -14,11 +14,11 @@
 <button id="boton3">If / Else Buscadores con enlaces</button>
 <button id="boton4">Switch</button>
 
-<h3 id="mensaje"></h3>
-
+<h1 id="mensaje"></h1>
 
 <!-- Scripts de JavaScript -->
-<script type="text/javascript" src="js/scripts_ejercicio_condicionales.js"></script>
+<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="js/jquery_ejercicios.js"></script>
 
 </body>
 </html>
