--- a/ejercicio_jquery.html
+++ b/ejercicio_jquery.html
@@ -8,14 +8,14 @@
 </head>
 
 <body>
+<div id="content">
+	<button id="boton1">If / Else</button>
+	<button id="boton2">If / Else Buscadores</button>
+	<button id="boton3">If / Else Buscadores con enlaces</button>
+	<button id="boton4">Switch</button>
 
-<button id="boton1">If / Else</button>
-<button id="boton2">If / Else Buscadores</button>
-<button id="boton3">If / Else Buscadores con enlaces</button>
-<button id="boton4">Switch</button>
-
-<h1 id="mensaje"></h1>
-
+	<h1 id="mensaje"></h1>
+</div>
 <!-- Scripts de JavaScript -->
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="js/jquery_ejercicios.js"></script>
